k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app.kubernetes.io/name: myingress
  annotations:
    traefik.ingress.networking.io/router.entrypounts: web #website
spec:
  rules:
  - host: my.app.local
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: api-service
            port: 
              number: 8080
      - pathType: Prefix
        path: /info
        backend:
          service:
            name: info-service
            port: 
              number: 8080
      - pathType: Prefix
        path: /login
        backend:
          service:
            name: login-service
            port: 
              number: 8080
